--- a/rooms-app/views/index.hbs
+++ b/rooms-app/views/index.hbs
@@ -1,2 +1,10 @@
 <h1>{{appTitle}} 🚀</h1>
-<p>Welcome Ironhacker!</p>
+<h2>Discover our room collection </p>
+<hr>
+<a href="/rooms/allrooms" class="btn btn-dark">See rooms</a>
+
+ <div>
+    <p>
+        {{errorMessage}}
+    </p>
+ </div>
