--- a/rooms-app/views/profile.hbs
+++ b/rooms-app/views/profile.hbs
@@ -1,1 +1,8 @@
 <h1>Welcome to your profile {{currentUser.fullName}} !</h1>
+<hr>
+
+<h2>Find all available rooms</h2>
+
+<a href="/rooms/allrooms" >See more</a>
+
+
