review not working completely

--- a/rooms-app/views/rooms/room-detail.hbs
+++ b/rooms-app/views/rooms/room-detail.hbs
@@ -14,7 +14,8 @@
     <form action="/rooms/{{id}}/delete" method="post"><button class="btn btn-dark">Delete</button></form>
     <a href="/rooms/allrooms" class="btn btn-dark">Go back</a>
     </div>
-
+    <hr>
+    <a href="/rooms/{{id}}/add-review" class="btn btn-dark">Add a review</a>
         <div>
             <p>
                 {{errorMessage}}
