--- a/rooms-app/views/rooms/newComment.hbs
+++ b/rooms-app/views/rooms/newComment.hbs
@@ -1,8 +1,8 @@
-<h1>You're review matters</h1>
+<h1>Your review matters</h1>
 <hr>
 <form action="/rooms/{{_id}}/add-review" method="POST">
-
-    <div class="mb-3">
+  
+    <div class="mb-3">  
         <label for="comment" class="form-label">Comment: </label>
         <input required type="text" class="form-control" id="comment" name="comment">
     </div>
