--- a/rooms-app/views/rooms/room-detail.hbs
+++ b/rooms-app/views/rooms/room-detail.hbs
@@ -7,7 +7,13 @@
      <img src="{{imageUrl}}" class="card-img-top" alt="Room Image">
         <div class="card-body">
             <h5 class="card-title">{{description}}</h5>
-
+            <h4>Comments:</h4>
+            
+                {{#each arrayOfReviews}}
+            <li>{{comment}}</li>
+                {{/each}}
+            
+            <p>{{reviews}}</p>
         </div>
     </div>
     <div id="button-container">
