added: expose users to views, activities form to create activies and routes

--- a/rooms-app/views/rooms/room-detail.hbs
+++ b/rooms-app/views/rooms/room-detail.hbs
@@ -10,7 +10,7 @@
             <h4>Comments:</h4>
             
                 {{#each arrayOfReviews}}
-            <li>{{comment}}</li>
+            <li>{{this.comment}}</li>
                 {{/each}}
             
             <p>{{reviews}}</p>
